# imap_sorter

./: .gitignore  Cargo.toml  README.md  config.ini.example  rules.yaml  rules.yaml.example  secrets.key.example
.github/ISSUE_TEMPLATE/: bug_report.md
examples/: find_one_message.rs  get_one_message.rs
src/: config.rs  fetch_one.rs  imap_tools.rs  main.rs  rules.rs
