[package]
name = "imap_sorter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["std"] }
clap = { version = "4.4.8", features = ["derive"] }
confy = "0.5.1"
env_logger = "0.10.0"
log = "0.4.20"
securestore = "0.100.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.9.27"
simple_logger = { version = "4.3.0", default-features = false}
rustls-connector = { version = "0.18.0", optional = true }
rustls = {version = "0.23.2", default-features = false }
imap-proto = "0.16.4"


[dependencies.imap]
#version = "2.4.1"
version = "3.0.0-alpha.12"
default-features = false
features = ["rustls-tls"]
