[package]
name = "imap_sorter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.81", features = ["std"] }
clap = { version = "4.5.4", features = ["derive"] }
confy = "0.6.1"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
simple_logger = { version = "4.3.3", default-features = false}
rustls-connector = { version = "0.19.2", optional = true }
rustls = {version = "0.23.5", default-features = false }
imap-proto = "0.16.4"

securestore = { version = "0.100.0", optional = true }

[dependencies.imap]
#version = "2.4.1"
version = "3.0.0-alpha.14"
default-features = false
features = ["rustls-tls", "rustls-connector"]

 [features]
 default = [ "securestore" ]
 securestore = [ "dep:securestore" ]
